# toolbox-cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  Alarm_8cpp.html  Alarm_8cpp__incl.map  Alarm_8cpp__incl.md5  Alarm_8cpp_source.html  Alarm_8hpp.html  Alarm_8hpp__dep__incl.map  Alarm_8hpp__dep__incl.md5  Alarm_8hpp__incl.map  Alarm_8hpp__incl.md5  Alarm_8hpp_source.html  Algorithms_8md.html  Algorithms_8md_source.html  Allocator_8cpp.html  Allocator_8cpp__incl.map  Allocator_8cpp__incl.md5  Allocator_8cpp_source.html  Allocator_8hpp.html  Allocator_8hpp__dep__incl.map  Allocator_8hpp__dep__incl.md5  Allocator_8hpp__incl.map  Allocator_8hpp__incl.md5  Allocator_8hpp_source.html  Allocator_8ut_8cpp.html  Allocator_8ut_8cpp__incl.map  Allocator_8ut_8cpp__incl.md5  Allocator_8ut_8cpp_source.html  App_8cpp.html  App_8cpp__incl.map  App_8cpp__incl.md5  App_8cpp_source.html  App_8hpp.html  App_8hpp__dep__incl.map  App_8hpp__dep__incl.md5  App_8hpp__incl.map  App_8hpp__incl.md5  App_8hpp_source.html  (+2881 more)
.circleci/: config.yml
.github/workflows/: build.yml  ci-build.yml  gh-pages.yml  package.yml  release.yml
bench/: CMakeLists.txt  Histogram.bm.cpp  Log.bm.cpp  Map.bm.cpp  Net.bm.cpp  Ryu.bm.cpp  Stream.bm.cpp  Time.bm.cpp  Timer.bm.cpp  Util.bm.cpp  bench-plot.sh
doc/: Algorithms.md  BuildFromSource.md  CMakeLists.txt  Concurrency.md  DataStructures.md  Dependencies.md  Doxyfile.in  Messaging.md  MoSCoW.md  StringHandling.md
etc/: CMakeLists.txt  cppcheck-suppressions.txt  dotdepend.pl
etc/cmake/: CMakeLists.txt  FindSystemTap.cmake
example/: CMakeLists.txt  Dns.cpp  EchoClnt.cpp  EchoServ.cpp  HttpServ.cpp  Inotify.cpp
image/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+145 more)
toolbox/: CMakeLists.txt  Config.h.in  Main.bm.cpp  Main.ut.cpp  bm.hpp  hdr.hpp  http.hpp  io.hpp  ipc.hpp  net.hpp  resp.hpp  sys.hpp  util.hpp
toolbox/bm/: Benchmark.cpp  Benchmark.hpp  Context.cpp  Context.hpp  Ctx.cpp  Ctx.hpp  Range.cpp  Range.hpp  Record.cpp  Record.hpp  Suite.cpp  Suite.hpp  Utility.cpp  Utility.hpp
toolbox/contrib/: README.txt  flopen.c  http_parser.c  http_parser.h  libutil.h  pidfile.c  robin_hood.h
toolbox/hdr/: HdrHistogram.cpp  HdrHistogram.hpp  HdrHistogram.ut.cpp  HdrHistogramIterator.cpp  HdrHistogramIterator.hpp  Histogram.cpp  Histogram.hpp  Histogram.ut.cpp  Iterator.cpp  Iterator.hpp  Iterator.ut.cpp  Utility.cpp  Utility.hpp  Utility.ut.cpp
toolbox/http/: App.cpp  App.hpp  Conn.cpp  Conn.hpp  Error.cpp  Error.hpp  Exception.cpp  Exception.hpp  Parser.cpp  Parser.hpp  Parser.ut.cpp  Request.cpp  Request.hpp  Serv.cpp  Serv.hpp  Stream.cpp  Stream.hpp  Types.cpp  Types.hpp  Types.ut.cpp  Url.cpp  Url.hpp  Url.ut.cpp
toolbox/io/: Buffer.cpp  Buffer.hpp  Buffer.ut.cpp  Disposable.cpp  Disposable.hpp  Disposable.ut.cpp  Disposer.cpp  Disposer.hpp  Disposer.ut.cpp  Epoll.cpp  Epoll.hpp  EpollReactor.cpp  EpollReactor.hpp  EpollReactor.ut.cpp  Event.cpp  Event.hpp  EventFd.cpp  EventFd.hpp  File.cpp  File.hpp  Handle.cpp  Handle.hpp  Handle.ut.cpp  Hook.cpp  Hook.hpp  Hook.ut.cpp  Inotify.cpp  Inotify.hpp  Interruptible.cpp  Interruptible.hpp  Muxer.cpp  Muxer.hpp  Notifiable.cpp  Notifiable.hpp  Reactor.cpp  Reactor.hpp  Reactor.ut.cpp  Runner.cpp  Runner.hpp  Stream.cpp  (+9 more)
toolbox/ipc/: Futex.cpp  Futex.hpp  Mmap.cpp  Mmap.hpp  MpmcQueue.cpp  MpmcQueue.hpp  Msg.cpp  Msg.hpp  Shm.cpp  Shm.hpp  Signal.cpp  Signal.hpp
toolbox/net/: DgramSock.cpp  DgramSock.hpp  Endian.cpp  Endian.hpp  Endpoint.cpp  Endpoint.hpp  Endpoint.ut.cpp  Error.cpp  Error.hpp  Frame.cpp  Frame.hpp  Frame.ut.cpp  IoSock.cpp  IoSock.hpp  IoSock.ut.cpp  IpAddr.cpp  IpAddr.hpp  McastSock.cpp  McastSock.hpp  Protocol.cpp  Protocol.hpp  RateLimit.cpp  RateLimit.hpp  RateLimit.ut.cpp  Resolver.cpp  Resolver.hpp  Resolver.ut.cpp  Resolver2.cpp  Resolver2.hpp  Resolver2.ut.cpp  Runner.cpp  Runner.hpp  Runner.ut.cpp  Socket.cpp  Socket.hpp  Socket.ut.cpp  StreamAcceptor.cpp  StreamAcceptor.hpp  StreamConnector.cpp  StreamConnector.hpp  (+2 more)
toolbox/resp/: Exception.cpp  Exception.hpp  Parser.cpp  Parser.hpp  Parser.ut.cpp
toolbox/sys/: Argv.cpp  Argv.hpp  Daemon.cpp  Daemon.hpp  Date.cpp  Date.hpp  Date.ut.cpp  Error.cpp  Error.hpp  Limits.cpp  Limits.hpp  Log.cpp  Log.hpp  Log.ut.cpp  Logger.cpp  Logger.hpp  Options.cpp  Options.hpp  PidFile.cpp  PidFile.hpp  Runner.cpp  Runner.hpp  Signal.cpp  Signal.hpp  System.cpp  System.hpp  Thread.cpp  Thread.hpp  Thread.ut.cpp  Time.bm.cpp  Time.cpp  Time.hpp  Time.ut.cpp  Trace.cpp  Trace.hpp
toolbox/util/: Alarm.cpp  Alarm.hpp  Allocator.cpp  Allocator.hpp  Allocator.ut.cpp  Argv.cpp  Argv.hpp  Argv.ut.cpp  Array.cpp  Array.hpp  Array.ut.cpp  Benchmark.cpp  Benchmark.hpp  Bits.cpp  Bits.hpp  Compare.cpp  Compare.hpp  Concepts.hpp  Config.cpp  Config.hpp  Config.ut.cpp  Debug.hpp  Debug.ut.cpp  Enum.cpp  Enum.hpp  Enum.ut.cpp  Exception.cpp  Exception.hpp  Exception.ut.cpp  Finally.cpp  Finally.hpp  Finally.ut.cpp  IntTypes.cpp  IntTypes.hpp  IntTypes.ut.cpp  Math.cpp  Math.hpp  Math.ut.cpp  MemAlloc.cpp  MemAlloc.hpp  (+73 more)
